# CPPTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt
.github/workflows/: ci.yml
cmake/: ubuntu-toolchain-x86-64.cmake  variant.cmake
src/: CMakeLists.txt  main.cpp
src/Utils/: TestTool.cpp  TestTool.h
test/: CMakeLists.txt  testMain.cpp
